Description: iccarm + gn compilation adaptation IssueNo: https://gitee.com/openharmony/third_party_harfbuzz/issues/I5O5UT Feature or Bugfix: Feature Binary Source: No Signed-off-by: suwenxiang <suwenxiang@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -125,6 +125,13 @@ if (defined(ohos_lite)) {
     }
     sources = jpeg_sources
     public_configs = [ ":turbojpeg_config" ]
+    if (board_toolchain_type == "iccarm") {
+      cflags = [
+        "--diag_suppress",
+        "Pa181,Pe301,Pe546",
+      ]
+      cflags_cc = cflags
+    }
   }
 } else {
   ohos_static_library("turbojpeg_static") {
