Description: Fix undefined board_chaintool_type resulting in compilation error IssueNo: https://gitee.com/openharmony/third_party_cJSON/issues/I5ODQ6 Feature or Bugfix: Bugfix Binary Source: No Signed-off-by: suwenxiang <suwenxiang@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -125,7 +125,7 @@ if (defined(ohos_lite)) {
     }
     sources = jpeg_sources
     public_configs = [ ":turbojpeg_config" ]
-    if (board_toolchain_type == "iccarm") {
+    if (defined(board_toolchain_type) && board_toolchain_type == "iccarm") {
       cflags = [
         "--diag_suppress",
         "Pa181,Pe301,Pe546",
