Description: 修改arm-64编译选项 IssueNo: https://gitee.com/openharmony/third_party_libjpeg-turbo/issues/I8NKCH Feature or Bugfix: Bugfix Binary Source:No Signed-off-by: wyk99 <wangyuekai1@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -153,13 +153,15 @@ if (mkernel || is_win) {
   ]
 } else if (current_cpu == "arm" || current_cpu == "arm64") {
   define_config += [ "NEON_INTRINSICS" ]
-  cflags += [ "-DNEON_INTRINSICS" ]
+  cflags += [
+    "-DNEON_INTRINSICS",
+    "-Wno-pointer-sign",
+  ]
   include_dirs += [ "${target_gen_dir}/libjpeg-turbo-2.1.1/simd/arm" ]
   if (current_cpu == "arm") {
     cflags += [
       "-mfpu=neon",
       "-mfloat-abi=softfp",
-      "-Wno-pointer-sign",
     ]
   }
 }
