add platformsdk innerapi_tags
Signed-off-by: zhongning5 <zhongning5@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -211,6 +211,7 @@ if (defined(ohos_lite)) {
     sources = get_target_outputs(":libjpeg_action")
     public_configs = [ ":turbojpeg_config" ]
     deps = [ ":libjpeg_action" ]
+    innerapi_tags = [ "platformsdk" ]
     part_name = "libjpeg-turbo"
     subsystem_name = "thirdparty"
   }
