--- a/BUILD.gn
+++ b/BUILD.gn
@@ -199,6 +199,10 @@ if (!defined(ohos_lite)) {
   ]
 }
 
+if (is_ohos) {
+  define_config += [ "SK_ENABLE_HI_JPEG" ]
+}
+
 config("turbojpeg_config") {
   include_dirs += [ "${target_gen_dir}/libjpeg-turbo-3.1.0/src" ]
   ldflags = [ "-Wl,--lto-O0" ]
