update: 更新文件 BUILD.gn 因hisi侧依赖，添加visibility管控
Signed-off-by: zfshank <479390563@qq.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -252,6 +252,7 @@ if (defined(ohos_lite)) {
       "//out/*",
       "//vendor/hisi/confidential/contexthub/src/framework/hisi/ui/third_party/*",
       "//device/board/hihope/rk3568/camera/vdi_impl/v4l2/pipeline_core:camera_pipeline_core",
+      "//foundation/window/window_manager/dmserver/test/unittest:dmserver_unittest_common",
     ]
     sources = get_target_outputs(":libjpeg_action")
     public_configs = [ ":turbojpeg_config" ]
