--- a/BUILD.gn
+++ b/BUILD.gn
@@ -253,6 +253,7 @@ if (defined(ohos_lite)) {
       "//vendor/hisi/confidential/contexthub/src/framework/hisi/ui/third_party/*",
       "//device/board/hihope/rk3568/camera/vdi_impl/v4l2/pipeline_core:camera_pipeline_core",
       "//foundation/window/window_manager/dmserver/test/unittest:dmserver_unittest_common",
+      "//foundation/window/window_manager/extension/window_extension/test/unittest:window_extension_unittest_common",
     ]
     sources = get_target_outputs(":libjpeg_action")
     public_configs = [ ":turbojpeg_config" ]
